// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsContext renders correctly with activeTabId 1`] = `
<div
  className="tabs-context--wrapper"
>
  <div
    className="tabs--wrapper Compact"
  >
    <ul
      className="tabs-list"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={false}
        className="tab--wrapper tabs-list_tab--wrapper"
        role="tab"
      >
        <a
          className="tab-inner tabs-list_tab-inner"
          onClick={[Function]}
        >
          First
        </a>
      </li>
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tab--wrapper tabs-list_tab--wrapper active"
        role="tab"
      >
        <a
          className="tab-inner tabs-list_tab-inner"
          onClick={[Function]}
        >
          Second
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tab-panels--wrapper"
  >
    <div
      className="tab-panel--wrapper tab-panel non-active"
      role="tabpanel"
    >
      First slide
    </div>
    <div
      className="tab-panel--wrapper tab-panel active animation-direction-rtl"
      role="tabpanel"
    >
      Second slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly with className 1`] = `
<div
  className="tabs-context--wrapper test"
>
  <div
    className="tabs--wrapper Compact"
  >
    <ul
      className="tabs-list"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tab--wrapper tabs-list_tab--wrapper active"
        role="tab"
      >
        <a
          className="tab-inner tabs-list_tab-inner"
          onClick={[Function]}
        >
          First
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tab-panels--wrapper"
  >
    <div
      className="tab-panel--wrapper tab-panel active animation-direction-rtl"
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly with empty props 1`] = `
<div
  className="tabs-context--wrapper"
>
  <div
    className="tabs--wrapper Compact"
  >
    <ul
      className="tabs-list"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tab--wrapper tabs-list_tab--wrapper active"
        role="tab"
      >
        <a
          className="tab-inner tabs-list_tab-inner"
          onClick={[Function]}
        >
          First
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tab-panels--wrapper"
  >
    <div
      className="tab-panel--wrapper tab-panel active animation-direction-rtl"
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly with id 1`] = `
<div
  className="tabs-context--wrapper"
  id="test"
>
  <div
    className="tabs--wrapper Compact"
  >
    <ul
      className="tabs-list"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tab--wrapper tabs-list_tab--wrapper active"
        role="tab"
      >
        <a
          className="tab-inner tabs-list_tab-inner"
          onClick={[Function]}
        >
          First
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tab-panels--wrapper"
  >
    <div
      className="tab-panel--wrapper tab-panel active animation-direction-rtl"
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;
